@@ -22,19 +22,7 @@
 
 -verbose:gc
 
--Xloggc:/var/presto/logs/gc.log
-
--XX:+PrintGCDetails
-
--XX:+PrintGCTimeStamps
-
--XX:+PrintGCDateStamps
-
--XX:+UseGCLogFileRotation
-
--XX:NumberOfGCLogFiles=5
-
--XX:GCLogFileSize=3M
+-Xlog:gc*:/var/presto/logs/gc.log
 
 -javaagent:/opt/jmx_exporter/jmx_exporter.jar=8082:/opt/jmx_exporter/config/config.yml
 
